[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "karthik duggana",email = "d.karthikyadav94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
argparse = ["poetry-core>=>=1.4.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "src.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

